Use separate config for preferences and make each a separate bean